--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,7 +25,7 @@
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail" />
     <fragment
-        android:id="@+id/cafeFragment2"
+        android:id="@+id/cafeFragment"
         android:name="com.vedianbunka.lab_week_04.CafeFragment"
         android:label="fragment_cafe"
         tools:layout="@layout/fragment_cafe" />
